<resources>
    <string name="app_name">Cong Dong Meme</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tao">Tạo Meme</string>
    <string name="menu_yeu_thich">Meme Yêu Thích</string>
    <string name="menu_da_luu">Ảnh Đã Lưu</string>
    <string name="menu_cai_dat">Cài Đặt</string>
    <string name="menu_gioi_thieu">Giới Thiệu</string>
    <string name="menu_them_meme">Thêm Meme vào Server</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="idADapp">ca-app-pub-6851769271647416~9601900263</string>
    <string name="idADfullscreen">ca-app-pub-3159028965186310/2865386932</string>
    <string name="idBannerTest">ca-app-pub-3940256099942544/6300978111</string>
    <string name="idBanner">ca-app-pub-3159028965186310/9231484739</string>
</resources>
