<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:title="@string/menu_tao" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/menu_yeu_thich" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_saved_black_24dp"
            android:title="@string/menu_da_luu" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/menu_cai_dat" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_gioi_thieu" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_file_upload_black_24dp"
                android:title="@string/menu_them_meme" />
        </menu>
    </item>

</menu>
