<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.trungdaniel.congdongmeme.ui.home.HomeFragment"
        android:label="@string/menu_tao"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.trungdaniel.congdongmeme.ui.gallery.GalleryFragment"
        android:label="@string/menu_yeu_thich"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.trungdaniel.congdongmeme.ui.saved.SavedFragment"
        android:label="@string/menu_da_luu"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.trungdaniel.congdongmeme.ui.tools.ToolsFragment"
        android:label="@string/menu_cai_dat"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.trungdaniel.congdongmeme.ui.share.ShareFragment"
        android:label="@string/menu_gioi_thieu"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.trungdaniel.congdongmeme.ui.send.SendFragment"
        android:label="@string/menu_them_meme"
        tools:layout="@layout/fragment_send" />
</navigation>